--- a/pages/about.html
+++ b/pages/about.html
@@ -2474,12 +2474,7 @@
       const players = Plyr.setup('.js-player');
     </script>
 
-    <script src="../scripts/slider.js"></script>
-    <script src="../scripts/burger.js"></script>
-    <script src="../scripts/dialog-button.js"></script>
-    <script src="../scripts/tabs.js"></script>
-    <script src="../scripts/popup.js"></script>
-    <script src="../scripts/header.js"></script>
+<script src="../scripts/scripts.js"></script>
 </body>
 
 </html>
