--- a/pages/account/family.html
+++ b/pages/account/family.html
@@ -662,10 +662,7 @@
             </div>
         </footer>
     </div>
-    <script src="../../scripts/burger.js"></script>
-    <script src="../../scripts/dropdown.js"></script>
-    <script src="../../scripts/account-sidebar.js"></script>
-    <script src="../../scripts/header.js"></script>
+    <script src="../../scripts/scripts.js"></script>
 </body>
 
 </html>
