--- a/pages/auth/forgot.html
+++ b/pages/auth/forgot.html
@@ -80,7 +80,6 @@
             </div>
         </div>
     </div>
-    <script src="../../scripts/burger.js"></script>
-    <script src="../../scripts/input.js"></script>
+    <script src="../../scripts/scripts.js"></script>
 </body>
 </html>
