--- a/pages/cart.html
+++ b/pages/cart.html
@@ -1114,10 +1114,6 @@
             </div>
         </footer>
     </div>
-    <script src="../scripts/burger.js"></script>
-    <script src="../scripts/popup.js"></script>
-    <script src="../scripts/header.js"></script>
-    <script src="../scripts/cart-need.js"></script>
-    <script src="../scripts/select.js"></script>
+    <script src="../scripts/scripts.js"></script>
 </body>
 </html>
