--- a/pages/donate.html
+++ b/pages/donate.html
@@ -540,13 +540,7 @@
             </div>
         </footer>
     </div>
-    <script src="../scripts/burger.js"></script>
-    <script src="../scripts/donate.js"></script>
-    <script src="../scripts/input.js"></script>
-    <script src="../scripts/toggle-btns.js"></script>
-    <script src="../scripts/checkbox.js"></script>
-    <script src="../scripts/header.js"></script>
-    <script src="../scripts/sum-donate.js"></script>
+    <script src="../scripts/scripts.js"></script>
 </body>
 
 </html>
