--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -711,7 +711,7 @@
             </div>
         </footer>
     </div>
-<div class="popup">
+<div class="feedback-popup">
     <div class="react-responsive-modal-root" data-testid="root">
         <div class="react-responsive-modal-overlay PopUpFull_overlay" data-testid="overlay" aria-hidden="true"
             style="animation: 300ms ease 0s 1 normal none running react-responsive-modal-overlay-in;"></div>
@@ -801,9 +801,6 @@
         </div>
     </div>
 </div>
-<script src="../../scripts/burger.js"></script>
-<script src="../../scripts/checkbox.js"></script>
-<script src="../../scripts/header.js"></script>
-<script src="../../scripts/feedback-popup.js"></script>
+<script src="../../scripts/scripts.js"></script>
 </body>
 </html>
