--- a/pages/form/form2.html
+++ b/pages/form/form2.html
@@ -1480,9 +1480,7 @@
             </div>
         </div>
     </footer>
-    <script src="../../scripts/dropdown.js"></script>
-    <script src="../../scripts/form-radio.js"></script>
-    <script src="../../scripts/header.js"></script>
+    <script src="../../scripts/scripts.js"></script>
 </div>
 </body>
 </html>
