--- a/pages/news.html
+++ b/pages/news.html
@@ -337,6 +337,5 @@
             </div>
         </footer>
     </div>
-    <script src="../scripts/header.js"></script>
-</body>
+    <script src="../scripts/scripts.js"></script></body>
 </html>
