--- a/pages/auth/register.html
+++ b/pages/auth/register.html
@@ -243,7 +243,6 @@
              </div>
          </div>
  </div>
- <script src="../../scripts/burger.js"></script>
- <script src="../../scripts/checkbox.js"></script>
+ <script src="../../scripts/scripts.js"></script>
 </body>
 </html>
