--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -273,7 +273,6 @@
         </div>
     </footer>
    </div>
-   <script src="../scripts/burger.js"></script>
-   <script src="../scripts/header.js"></script>
+   <script src="../scripts/scripts.js"></script>
 </body>
 </html>
