--- a/pages/families/families.html
+++ b/pages/families/families.html
@@ -1003,8 +1003,6 @@
             </div>
         </footer>
     </div>
-    <script src="../../scripts/burger.js"></script>
-    <script src="../../scripts/popup.js"></script>
-    <script src="../../scripts/header.js"></script>
+    <script src="../../scripts/scripts.js"></script>
 </body>
 </html>
