--- a/pages/families/family.html
+++ b/pages/families/family.html
@@ -946,11 +946,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="../../scripts/slick.min.js"></script>
-    <script src="../../scripts/slider.js"></script>
-    <script src="../../scripts/burger.js"></script>
-    <script src="../../scripts/popup.js"></script>
-    <script src="../../scripts/needs-tabs.js"></script>
-    <script src="../../scripts/header.js"></script>
+    <script src="../../scripts/scripts.js"></script>
 </body>
 
 </html>
