--- a/pages/family.html
+++ b/pages/family.html
@@ -422,9 +422,6 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="../scripts/slick.min.js"></script>
-    <script src="../scripts/slider.js"></script>
-    <script src="../scripts/burger.js"></script>
-    <script src="../scripts/popup.js"></script>
-    <script src="../scripts/header.js"></script>
+    <script src="../scripts/scripts.js"></script>
 </body>
 </html>
