--- a/pages/feedback/reports.html
+++ b/pages/feedback/reports.html
@@ -653,12 +653,7 @@
             </div>
         </footer>
     </div>
-        <script src="../../scripts/burger.js"></script>
-        <script src="../../scripts/checkbox.js"></script>
-        <script src="../../scripts/select.js"></script>
-        <script src="../../scripts/popup.js"></script>
-        <script src="../../scripts/header.js"></script>
-        <script src="../../scripts/dropdown.js"></script>
+    <script src="../../scripts/scripts.js"></script>
 </body>
 
 </html>
