--- a/pages/form/form1.html
+++ b/pages/form/form1.html
@@ -3384,11 +3384,7 @@
             </div>
         </div>
     </footer>
-    <script src="../../scripts/dropdown.js"></script>
-    <script src="../../scripts/form-radio.js"></script>
-    <script src="../../scripts/form-checkbox.js"></script>
-    <script src="../../scripts/form-select.js"></script>
-    <script src="../../scripts/header.js"></script>
+    <script src="../../scripts/scripts.js"></script>
 </div>
 </body>
 </html>
