--- a/pages/form/form3.html
+++ b/pages/form/form3.html
@@ -1103,9 +1103,7 @@
             </div>
         </div>
     </footer>
-    <script src="../../scripts/dropdown.js"></script>
-    <script src="../../scripts/form-checkbox.js"></script>
-    <script src="../../scripts/header.js"></script>
+    <script src="../../scripts/scripts.js"></script>
 </div>
 </body>
 </html>
