--- a/pages/form/form7.html
+++ b/pages/form/form7.html
@@ -3881,8 +3881,7 @@
             </div>
         </div>
     </footer>
-    <script src="../../scripts/dropdown.js"></script>
-    <script src="../../scripts/header.js"></script>
+    <script src="../../scripts/scripts.js"></script>
 </div>
 </body>
 </html>
