--- a/pages/news-and-reports.html
+++ b/pages/news-and-reports.html
@@ -494,9 +494,6 @@
             </div>
         </footer>
     </div>
-    <script src="../scripts/burger.js"></script>
-    <script src="../scripts/header.js"></script>
-    <script src="../scripts/select.js"></script>
-    <script src="../scripts/checkbox.js"></script>
+    <script src="../scripts/scripts.js"></script>
 </body>
 </html>
