--- a/pages/feedback/reports.html
+++ b/pages/feedback/reports.html
@@ -56,7 +56,7 @@
 
 <body>
     <div id="__next">
-        <div class="headroom-wrapper" style="height: 110px">
+        <div class="headroom-wrapper">
             <div class="headroom headroom--disabled-animation">
                 <header class="Header_root " style="color: var(--white);">
                     <div class="Header_headerRoot">
@@ -167,7 +167,8 @@
             <div class="Mobile_helpBtnContent">помочь</div>
         </a>
         <div class="Page_root">
-            <div class="Default_defaultContainer " style="padding-top: 80px; padding-bottom: 104px;">
+            <div class="Default_defaultContainer ">
+                <div class="Default_defaultContainer_inner ">
                 <div class="Catalog_header">
                     <h1 class="Catalog_pageTitle">Отчёты и отзывы</h1>
                     <div class="Reports_tabs">
@@ -185,52 +186,22 @@
                                 <div class="react-select-container Filters_mb"><span
                                         aria-live="polite" aria-atomic="false" aria-relevant="additions text"
                                         class="css-7pg0cj-a11yText"></span>
-                                    <div class="react-select__control">
-                                        <div class="react-select__value-container">
-                                            <div class="react-select__placeholder">За весь
-                                                период
-                                            </div>
-                                            <div class="css-1g6gooi">
-                                                <div class="react-select__input" style="display: inline-block;"><input
-                                                        autocapitalize="none" autocomplete="off" autocorrect="off"
-                                                        id="react-select-148-input" spellcheck="false" tabindex="0"
-                                                        type="text" aria-autocomplete="list" value=""
-                                                        style="box-sizing: content-box; width: 2px; background: 0px center; border: 0px; font-size: inherit; opacity: 1; outline: 0px; padding: 0px; color: inherit;">
-                                                    <div
-                                                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: 14px; font-family: Montserrat, sans-serif; font-weight: 700; font-style: normal; letter-spacing: normal; text-transform: uppercase;">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="react-select__indicators css-1wy0on6"><span
-                                                class="react-select__indicator-separator css-1okebmr-indicatorSeparator"></span>
-                                            <div class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
-                                                aria-hidden="true"><svg height="20" width="20" viewBox="0 0 20 20"
-                                                    aria-hidden="true" focusable="false" class="css-8mmkcg">
-                                                    <path
-                                                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z">
-                                                    </path>
-                                                </svg></div>
-                                        </div>
-                                    </div>
-                                    <div class="react-select__menu">
-                                        <div class="react-select__menu-list">
-                                            <div class="react-select__option react-select__option--is-selected" id="react-select-3-option-0" tabindex="-1">За весь период
-                                            </div>
-                                        
-                                            <div class="react-select__option " id="react-select-3-option-2" tabindex="-1">2024</div>
-                                            <div class="react-select__option " id="react-select-3-option-2" tabindex="-1">2023</div>
-                                            <div class="react-select__option " id="react-select-3-option-2" tabindex="-1">2022</div>
-                                            <div class="react-select__option " id="react-select-3-option-2" tabindex="-1">2021</div>
-                                            <div class="react-select__option " id="react-select-3-option-2" tabindex="-1">2020</div>
-                                            <div class="react-select__option " id="react-select-3-option-2" tabindex="-1">2019</div>
-                                            <div class="react-select__option " id="react-select-3-option-2" tabindex="-1">2018</div>
-                                            <div class="react-select__option" id="react-select-3-option-3" tabindex="-1">2017</div>
-                                            <div class="react-select__option" id="react-select-3-option-4" tabindex="-1">2016</div>
-                                            <div class="react-select__option" id="react-select-3-option-5" tabindex="-1">2015</div>
-                                            <div class="react-select__option" id="react-select-3-option-6" tabindex="-1">2014</div>
-                                        </div>
-                                    </div>
+
+                                    <select class="custom">
+                                        <option>За весь период</option>
+                                        <option>2024</option>
+                                        <option>2023</option>
+                                        <option>2022</option>
+                                        <option>2021</option>
+                                        <option>2020</option>
+                                        <option>2019</option>
+                                        <option>2018</option>
+                                        <option>2017</option>
+                                        <option>2016</option>
+                                        <option>2015</option>
+                                        <option>2014</option>
+                                    </select>
+                                    
                                 </div>
                             </div>
                             <div class="Filters_mb">
@@ -600,6 +571,7 @@
                     </div>
                 </div>
             </div>
+            </div>
         </div>
         <footer style="background: var(--primary);">
             <div class="Default_defaultContainer ">
@@ -655,10 +627,10 @@
     </div>
         <script src="../../scripts/burger.js"></script>
         <script src="../../scripts/checkbox.js"></script>
-        <script src="../../scripts/select.js"></script>
         <script src="../../scripts/popup.js"></script>
         <script src="../../scripts/header.js"></script>
         <script src="../../scripts/dropdown.js"></script>
+        <script src="../../scripts/selectnative.js"></script>
 </body>
 
 </html>
