headroom-wrapper remove inline css

--- a/pages/about.html
+++ b/pages/about.html
@@ -54,7 +54,7 @@
 <body>
 
     <div id="__next">
-        <div class="headroom-wrapper" style="height: 110px">
+        <div class="headroom-wrapper">
             <div class="headroom headroom--disabled-animation">
                 <header class="Header_root " style="color: var(--white);">
                     <div class="Header_headerRoot">
