--- a/pages/404.html
+++ b/pages/404.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div id="__next">
-        <div class="headroom-wrapper" style="height: 110px">
+        <div class="headroom-wrapper">
             <div class="headroom headroom--disabled-animation">
                 <header class="Header_root " style="color: var(--white);">
                     <div class="Header_headerRoot">
