clear inline css for slick btns

--- a/pages/about.html
+++ b/pages/about.html
@@ -262,8 +262,7 @@
                         </div>
                     </div>
                     <div class="Carousel_carouselRoot About_topCarousel">
-                        <button class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile prev"
-                            style="position: absolute; z-index: 999; top: 50%; left: -20px; transform: translateY(-50%);"><svg
+                        <button class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile prev"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none"
                                 viewBox="0 0 40 40" class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -601,8 +600,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile next"
-                            style="position: absolute; z-index: 999; top: 50%; right: -20px; transform: translateY(-50%);"><svg
+                        <button class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile next"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none"
                                 viewBox="0 0 40 40" class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1135,8 +1133,7 @@
                     </a>
                     <div class="Carousel_carouselRoot _active" data-tab="giver">
                         <button
-                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile prev"
-                            style="position: absolute; z-index: 999; top: 50%; left: -20px; transform: translateY(-50%);"><svg
+                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile prev"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none"
                                 viewBox="0 0 40 40" class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1256,8 +1253,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile next"
-                            style="position: absolute; z-index: 999; top: 50%; right: -20px; transform: translateY(-50%);"><svg
+                        <button class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile next"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none"
                                 viewBox="0 0 40 40" class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1268,8 +1264,7 @@
                     </div>
                     <div class="Carousel_carouselRoot " data-tab="volunteer">
                         <button
-                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile prev"
-                            style="position: absolute; z-index: 999; top: 50%; left: -20px; transform: translateY(-50%);"><svg
+                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile prev"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none" viewBox="0 0 40 40"
                                 class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1382,8 +1377,7 @@
                             </div>
                         </div>
                         <button
-                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile next"
-                            style="position: absolute; z-index: 999; top: 50%; right: -20px; transform: translateY(-50%);"><svg
+                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile next"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none" viewBox="0 0 40 40"
                                 class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1394,8 +1388,7 @@
                     </div>
                     <div class="Carousel_carouselRoot" data-tab="family">
                         <button
-                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile prev"
-                            style="position: absolute; z-index: 999; top: 50%; left: -20px; transform: translateY(-50%);"><svg
+                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile prev"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none" viewBox="0 0 40 40"
                                 class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1506,8 +1499,7 @@
                             </div>
                         </div>
                         <button
-                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile next"
-                            style="position: absolute; z-index: 999; top: 50%; right: -20px; transform: translateY(-50%);"><svg
+                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile next"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none" viewBox="0 0 40 40"
                                 class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1524,8 +1516,7 @@
                     <div class="Carousel_carouselRoot "
                         style="max-width: 1600px; margin: 64px auto 0px; padding-bottom: 96px; border-bottom: 1px solid rgb(180, 180, 180);">
                         <button
-                            class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-prev"
-                            style="position: absolute; z-index: 999; top: 50%; left: 0px; transform: translateY(-50%);"><svg
+                            class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-prev"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none"
                                 viewBox="0 0 40 40" class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1660,8 +1651,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-next"
-                            style="position: absolute; z-index: 999; top: 50%; right: 0px; transform: translateY(-50%);"><svg
+                        <button class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-next"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none"
                                 viewBox="0 0 40 40" class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1730,8 +1720,7 @@
                     <h1>Друзья фонда</h1>
                     <div class="Carousel_carouselRoot " style="max-width: 1600px; margin: 64px auto 0px;">
                         <button
-                            class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-prev"
-                            style="position: absolute; z-index: 999; top: 50%; left: 0px; transform: translateY(-50%);"><svg
+                            class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-prev"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none"
                                 viewBox="0 0 40 40" class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1812,8 +1801,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-next"
-                            style="position: absolute; z-index: 999; top: 50%; right: 0px; transform: translateY(-50%);"><svg
+                        <button class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-next"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none"
                                 viewBox="0 0 40 40" class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1892,8 +1880,7 @@
                     <h1>СМИ о нас</h1>
                     <div class="Carousel_carouselRoot " >
                         <button
-                            class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-prev"
-                            style="position: absolute; z-index: 999; top: 50%; left: -20px; transform: translateY(-50%);"><svg
+                            class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-prev"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none" viewBox="0 0 40 40"
                                 class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -2077,8 +2064,7 @@
                             </div>
                         </div>
                         <button
-                            class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-next"
-                            style="position: absolute; z-index: 999; top: 50%; right: -20px; transform: translateY(-50%);"><svg
+                            class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-next"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none" viewBox="0 0 40 40"
                                 class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
