--- a/pages/donate.html
+++ b/pages/donate.html
@@ -459,7 +459,10 @@
                                                     приложении</a> Сбербанка и реквизиты будут заполнены автоматически.</p>
                                         </div>
                                     </div>
+
                                 </div>
+                                <p class="CreditCard_reports" style="margin-top: 24px;"><a href="./feedback/reports.html">Отчеты</a> и <a href="./feedback/feedback.html">отзывы</a> о проделанной
+                                    работе можно посмотреть тут</p>
                                 
                             </div>
                         </div>
