add custom select in all pages

--- a/pages/news-and-reports.html
+++ b/pages/news-and-reports.html
@@ -196,33 +196,11 @@
                         </div>
                         <div style="margin-bottom: 40px;">
                             <div class="react-select-container css-2b097c-container"><span aria-live="polite"
-                                    aria-atomic="false" aria-relevant="additions text" class="css-7pg0cj-a11yText"></span>
-                                <div class="react-select__control css-yk16xz-control">
-                                    <div
-                                        class="react-select__value-container react-select__value-container--has-value css-1hwfws3">
-                                        <div class="react-select__single-value react-select__placeholder css-1uccc91-singleValue">По дате публикации
-                                        </div><input id="react-select-104-input" readonly="" tabindex="0"
-                                            aria-autocomplete="list" class="css-62g3xt-dummyInput" value="">
-                                    </div>
-                                    <div class="react-select__indicators css-1wy0on6"><span
-                                            class="react-select__indicator-separator css-1okebmr-indicatorSeparator"></span>
-                                        <div class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
-                                            aria-hidden="true"><svg height="20" width="20" viewBox="0 0 20 20"
-                                                aria-hidden="true" focusable="false" class="css-8mmkcg">
-                                                <path
-                                                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z">
-                                                </path>
-                                            </svg></div>
-                                    </div>
-                                </div>
-                                <div class="react-select__menu css-26l3qy-menu">
-                                    <div class="react-select__menu-list css-11unzgr">
-                                        <div class="react-select__option  css-1n7v3ny-option"
-                                            id="react-select-13-option-0" tabindex="-1">По дате публикации</div>
-                                        <div class="react-select__option css-yt9ioa-option" id="react-select-13-option-1" tabindex="-1">По дате
-                                            модификации</div>
-                                    </div>
-                                </div>
+                                aria-atomic="false" aria-relevant="additions text" class="css-7pg0cj-a11yText"></span>
+                                <select class="custom">
+                                    <option>По дате публикации</option>
+                                    <option>По дате модификации</option>
+                                </select>
                             </div>
                         </div>
                         <p class="Category_selectTitle" style="margin-top: 40px;">Категории</p>
@@ -495,5 +473,6 @@
         </footer>
     </div>
     <script src="../scripts/scripts.js"></script>
+    <script src="../scripts/selectnative.js"></script>
 </body>
 </html>
