--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -205,32 +205,20 @@
                         <div>
                             <div class="react-select-container css-2b097c-container"><span aria-live="polite"
                                     aria-atomic="false" aria-relevant="additions text" class="css-7pg0cj-a11yText"></span>
-                                <div class="react-select__control css-yk16xz-control">
-                                    <div class="react-select__value-container css-1hwfws3">
-                                        <div class="react-select__placeholder css-1wa3eu0-placeholder">За весь период</div>
-                                        <div class="css-1g6gooi">
-                                            <div class="react-select__input" style="display: inline-block;"><input
-                                                    autocapitalize="none" autocomplete="off" autocorrect="off"
-                                                    id="react-select-146-input" spellcheck="false" tabindex="0" type="text"
-                                                    aria-autocomplete="list" value=""
-                                                    style="box-sizing: content-box; width: 2px; background: 0px center; border: 0px; font-size: inherit; opacity: 1; outline: 0px; padding: 0px; color: inherit;">
-                                                <div
-                                                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: 14px; font-family: Montserrat, sans-serif; font-weight: 700; font-style: normal; letter-spacing: normal; text-transform: uppercase;">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="react-select__indicators css-1wy0on6"><span
-                                            class="react-select__indicator-separator css-1okebmr-indicatorSeparator"></span>
-                                        <div class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
-                                            aria-hidden="true"><svg height="20" width="20" viewBox="0 0 20 20"
-                                                aria-hidden="true" focusable="false" class="css-8mmkcg">
-                                                <path
-                                                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z">
-                                                </path>
-                                            </svg></div>
-                                    </div>
-                                </div>
+                                    <select class="custom">
+                                        <option>За весь период</option>
+                                        <option>2024</option>
+                                        <option>2023</option>
+                                        <option>2022</option>
+                                        <option>2021</option>
+                                        <option>2020</option>
+                                        <option>2019</option>
+                                        <option>2018</option>
+                                        <option>2017</option>
+                                        <option>2016</option>
+                                        <option>2015</option>
+                                        <option>2014</option>
+                                    </select>
                             </div>
                         </div>
                         <p class="Feedback_selectTitle" style="margin-top: 50px;">Акции и мероприятия:</p>
@@ -263,34 +251,11 @@
                                     акция</span></label></div>
                         <div style="margin-top: 15px;">
                             <div class="react-select-container css-2b097c-container"><span aria-live="polite"
-                                    aria-atomic="false" aria-relevant="additions text" class="css-7pg0cj-a11yText"></span>
-                                <div class="react-select__control css-yk16xz-control">
-                                    <div class="react-select__value-container css-1hwfws3">
-                                        <div class="react-select__placeholder css-1wa3eu0-placeholder">Другие акции и
-                                            мероприятия</div>
-                                        <div class="css-1g6gooi">
-                                            <div class="react-select__input" style="display: inline-block;"><input
-                                                    autocapitalize="none" autocomplete="off" autocorrect="off"
-                                                    id="react-select-147-input" spellcheck="false" tabindex="0" type="text"
-                                                    aria-autocomplete="list" value=""
-                                                    style="box-sizing: content-box; width: 2px; background: 0px center; border: 0px; font-size: inherit; opacity: 1; outline: 0px; padding: 0px; color: inherit;">
-                                                <div
-                                                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: 14px; font-family: Montserrat, sans-serif; font-weight: 700; font-style: normal; letter-spacing: normal; text-transform: uppercase;">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="react-select__indicators css-1wy0on6"><span
-                                            class="react-select__indicator-separator css-1okebmr-indicatorSeparator"></span>
-                                        <div class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
-                                            aria-hidden="true"><svg height="20" width="20" viewBox="0 0 20 20"
-                                                aria-hidden="true" focusable="false" class="css-8mmkcg">
-                                                <path
-                                                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z">
-                                                </path>
-                                            </svg></div>
-                                    </div>
-                                </div>
+                                aria-atomic="false" aria-relevant="additions text" class="css-7pg0cj-a11yText"></span>
+                                <select class="custom">
+                                    <option>Другие акции и мероприятия</option>
+                                    <option>Акция "Пасхальный подарок"</option>
+                                </select>
                             </div>
                         </div>
                         <p class="Feedback_selectTitle" style="margin-top: 50px;">Авторы отзывов</p>
@@ -761,5 +726,6 @@
     </div>
 </div>
 <script src="../../scripts/scripts.js"></script>
+<script src="../../scripts/selectnative.js"></script>
 </body>
 </html>
