--- a/pages/feedback/reports.html
+++ b/pages/feedback/reports.html
@@ -310,41 +310,10 @@
                                     <div class="react-select-container Filters_mb css-2b097c-container"><span
                                             aria-live="polite" aria-atomic="false" aria-relevant="additions text"
                                             class="css-7pg0cj-a11yText"></span>
-                                        <div class="react-select__control">
-                                            <div class="react-select__value-container css-1hwfws3">
-                                                <div class="react-select__placeholder css-1wa3eu0-placeholder">Выбрать
-                                                </div>
-                                                <div class="css-1g6gooi">
-                                                    <div class="react-select__input" style="display: inline-block;">
-                                                        <input autocapitalize="none" autocomplete="off"
-                                                            autocorrect="off" id="react-select-149-input"
-                                                            spellcheck="false" tabindex="0" type="text"
-                                                            aria-autocomplete="list" value=""
-                                                            style="box-sizing: content-box; width: 2px; background: 0px center; border: 0px; font-size: inherit; opacity: 1; outline: 0px; padding: 0px; color: inherit;">
-                                                        <div
-                                                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: 14px; font-family: Montserrat, sans-serif; font-weight: 700; font-style: normal; letter-spacing: normal; text-transform: uppercase;">
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="react-select__indicators css-1wy0on6"><span
-                                                    class="react-select__indicator-separator css-1okebmr-indicatorSeparator"></span>
-                                                <div class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
-                                                    aria-hidden="true"><svg height="20" width="20" viewBox="0 0 20 20"
-                                                        aria-hidden="true" focusable="false" class="css-8mmkcg">
-                                                        <path
-                                                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z">
-                                                        </path>
-                                                    </svg></div>
-                                            </div>
-                                        </div>
-                                        <div class="react-select__menu">
-                                            <div class="react-select__menu-list">
-                                                <div class="react-select__option" id="react-select-3-option-0" tabindex="-1">выбрать
-                                                </div>
-                                                <div class="react-select__option" id="react-select-3-option-1" tabindex="-1">отчеты в минюст</div>
-                                            </div>
-                                        </div>
+                                        <select class="custom">
+                                            <option>Выбрать</option>
+                                            <option>Отчеты в минюст</option>
+                                        </select>
                                     </div>
                                 </div>
                             </div>
