--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li><a class="done" href="./pages/contacts.html" target="_blank">Контакты</a></li>
         <li><a class="done" href="./pages/feedback/reports.html" target="_blank">Отчеты</a></li>
         <li><a class="done" href="./pages/feedback/feedback.html" target="_blank">Отзывы</a></li>
+        <li><a class="done" href="./pages/feedback/feedback-empty.html" target="_blank">Отзывы (пустые)</a></li>
         <li><a class="done" href="./pages/donate.html" target="_blank">Помочь</a></li>
         <li><a class="done" href="./pages/cart.html" target="_blank">Корзина</a></li>
         <li><a class="done" href="./pages/auth/login.html" target="_blank">Войти</a></li>
