add hero block in reports page

--- a/pages/main.html
+++ b/pages/main.html
@@ -119,7 +119,7 @@
 
                         </div>
                         <div class="Header_headerButtons">
-                            <div class="Header_notificationButton">
+                            <div class="Header_notificationButton Icon_buttonWithCounterRoot ">
                                 <a
                                     class="Icon_iconButtonRoot Icon_xSmall  " 
                                     href="./cart.html"
@@ -140,6 +140,7 @@
                                         <circle cx="28.1667" cy="30.3333" r="2.5" fill="#292929"></circle>
                                     </svg>
                                 </a>
+                                <div class="Icon_counter">1</div>
                             </div>
                             <div class="Header_notificationButton">
                                 <a
