fix label in reports page

--- a/pages/feedback/reports.html
+++ b/pages/feedback/reports.html
@@ -406,7 +406,8 @@
                                     <div class="ReportCard_header"><span
                                             class="ReportCard_chip ReportCard_chipPrimary">Аудиторские
                                             заключения</span><span
-                                            class="ReportCard_chip ReportCard_chipTertiary">2021</span></div>
+                                            class="ReportCard_chip ReportCard_chipTertiary">2021</span>
+                                    </div>
                                     <h4 class="ReportCard_title">Аудиторское заключение</h4>
                                     <div class="ReportCard_previewWrap"><img
                                             src="https://storage.yandexcloud.net/pp-prod/Audit_2021_8448af65f1.webp"
@@ -478,8 +479,7 @@
                             <div class="Catalog_item">
                                 <div class="ReportCard_card bg-0">
                                     <div class="ReportCard_header"><span
-                                            class="ReportCard_chip ReportCard_chipPrimary">Аудиторские
-                                            заключения</span><span
+                                            class="ReportCard_chip ReportCard_chipPrimary">Отчет об акции</span><span
                                             class="ReportCard_chip ReportCard_chipTertiary">2021</span></div>
                                     <h4 class="ReportCard_title">Аудиторское заключение</h4>
                                     <div class="ReportCard_previewWrap"><img
