--- a/pages/main.html
+++ b/pages/main.html
@@ -216,8 +216,7 @@
                     </div>
                     <div class="Carousel_carouselRoot IndexPage_topCarousel">
                         <button
-                            class="Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile prev"
-                            style="position: absolute; z-index: 999; bottom: 0px; left: 0px;">
+                            class="Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile prev">
                             <svg
                                 xmlns="http://www.w3.org/2000/svg" 
                                 width="56" 
@@ -479,8 +478,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile next"
-                            style="position: absolute; z-index: 999; bottom: 0px; left: 112px;">
+                        <button class="Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile next">
                             <svg
                                 xmlns="http://www.w3.org/2000/svg" 
                                 width="56" 
@@ -1266,8 +1264,7 @@
                     <h1>СМИ о нас</h1>
                     <div class="Carousel_carouselRoot " >
                         <button
-                            class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-prev"
-                            style="position: absolute; z-index: 999; top: 50%; left: 0px; transform: translateY(-50%);"><svg
+                            class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-prev"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none" viewBox="0 0 40 40"
                                 class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1342,7 +1339,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-next" style="position: absolute; z-index: 999; top: 50%; right: 0px; transform: translateY(-50%);"><svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none" viewBox="0 0 40 40" class="Generic_clrIcon"><path fill="var(--primary)" class="Generic_iconPath" d="M8.333 21.667H28.1l-6.05 7.266a1.668 1.668 0 102.567 2.134l8.333-10c.056-.08.106-.163.15-.25 0-.084.083-.134.117-.217.075-.191.115-.395.116-.6a1.666 1.666 0 00-.116-.6c0-.083-.084-.133-.117-.217a1.996 1.996 0 00-.15-.25l-8.333-10a1.666 1.666 0 00-1.284-.6 1.667 1.667 0 00-1.283 2.734l6.05 7.266H8.333a1.667 1.667 0 100 3.334z"></path></svg>
+                        <button class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-next" ><svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none" viewBox="0 0 40 40" class="Generic_clrIcon"><path fill="var(--primary)" class="Generic_iconPath" d="M8.333 21.667H28.1l-6.05 7.266a1.668 1.668 0 102.567 2.134l8.333-10c.056-.08.106-.163.15-.25 0-.084.083-.134.117-.217.075-.191.115-.395.116-.6a1.666 1.666 0 00-.116-.6c0-.083-.084-.133-.117-.217a1.996 1.996 0 00-.15-.25l-8.333-10a1.666 1.666 0 00-1.284-.6 1.667 1.667 0 00-1.283 2.734l6.05 7.266H8.333a1.667 1.667 0 100 3.334z"></path></svg>
                         </button>
                     </div>
                     <a class="Simple_simpleButtonRoot Simple_large Simple_outline  Simple_responsive" style="display:block;margin:0 auto" href="./about.html#media-reviews">смотреть все</a>
