implement enable button in form

--- a/pages/donate.html
+++ b/pages/donate.html
@@ -253,7 +253,7 @@
                                     </svg></div>
                             <div class="Input_inputBlock" style="margin-bottom: 24px;">
                                 <label for="input_f35oo">email</label>
-                                <input id="input_f35oo" class="Input_input" type="email" name="email">
+                                <input id="input_f35oo" class="Input_input" type="email" name="email" required>
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                     width="40" height="40" fill="none" viewBox="0 0 40 40" class="Input_icon Input_icon-success">
                                     <path fill="var(--state-success)"
@@ -268,7 +268,7 @@
                                     </svg></div>
                             <div class="Input_inputBlock" style="margin-bottom: 24px;">
                                 <label for="input_hcwey">телефон</label>
-                                <input type='tel' id="input_hcwey" name='phone' class="Input_input Input_phone Input_number" data-mask='+7(999)999-99-99'>
+                                <input type='tel' id="input_hcwey" name='phone' class="Input_input Input_phone Input_number" data-mask='+7(999)999-99-99' required>
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                     width="40" height="40" fill="none" viewBox="0 0 40 40" class="Input_icon Input_icon-success">
                                     <path fill="var(--state-success)"
